estrutura inicial da navbar

--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bemol Digital</title>
+    <title>Bemol Digital - Produtos</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
-  <body></body>
+  <body>
+    <nav>
+        <ul>
+            <li><a href=""><img src="assets/img/selo80anos.png" alt="Logo Bemol" class="img-logo"></a></li>
+            <li class="li-right"><a href="#"><img src="assets/img/sair.png" alt="Sair da conta" class="carrinho"></a></li>
+            <li class="li-right"><a href="#"><img src="assets/img/carrinho.png" alt="Carrinho de compras" class="carrinho"></a></li>
+        </ul>
+    </nav>
+    <div class="resposta"></div>
+    <!-- <script src="assets/js/script.js"></script> -->
+  </body>
 </html>
