--- a/index.html
+++ b/index.html
@@ -5,18 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bemol Digital - Produtos</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <nav>
-        <ul>
-            <li><a href=""><img src="assets/img/selo80anos.png" alt="Logo Bemol" class="img-logo"></a></li>
-            <li class="li-right"><a href="#"><img src="assets/img/sair.png" alt="Sair da conta" class="carrinho"></a></li>
-            <li class="li-right"><a href="#"><img src="assets/img/carrinho.png" alt="Carrinho de compras" class="carrinho"></a></li>
-        </ul>
+    <nav class="navbar-top">
+      <ul>
+        <li>
+          <a href=""
+            ><img
+              src="assets/img/selo80anos.png"
+              alt="Logo Bemol"
+              class="nav-logo"
+          /></a>
+        </li>
+        <li class="nav-item-direita">
+          <a href="#"
+            ><img
+              src="assets/img/user.png"
+              alt="Usuario"
+              class="nav-icons"
+          /></a>
+        </li>
+        <li class="nav-item-direita">
+          <a href="#"
+            ><img
+              src="assets/img/carrinho.png"
+              alt="Carrinho de compras"
+              class="nav-icons"
+          /></a>
+        </li>
+        <li class="nav-item-direita">
+          <a href="#"
+            ><input type="text" placeholder="O que você procura?"></a>
+        </li>
+      </ul>
     </nav>
-    <div class="resposta"></div>
+    <div class="header-catalogo">
+      <p>Catalogo de produtos</p>
+      <h3>Itacoatiara</h3>
+    </div>
     <!-- <script src="assets/js/script.js"></script> -->
   </body>
 </html>
