Card de produtos e detalhes

--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
         </li>
         <li class="nav-item-direita">
           <a href="#"
-            ><img
-              src="assets/img/user.png"
-              alt="Usuario"
-              class="nav-icons"
+            ><img src="assets/img/user.png" alt="Usuario" class="nav-icons"
           /></a>
         </li>
         <li class="nav-item-direita">
@@ -37,14 +34,76 @@
         </li>
         <li class="nav-item-direita">
           <a href="#"
-            ><input type="text" placeholder="O que você procura?"></a>
+            ><input type="text" placeholder="O que você procura?"
+          /></a>
         </li>
       </ul>
     </nav>
-    <div class="header-catalogo">
-      <p>Catalogo de produtos</p>
-      <h3>Itacoatiara</h3>
-    </div>
-    <!-- <script src="assets/js/script.js"></script> -->
+    <main>
+      <section class="header-catalogo">
+        <p>Catalogo de produtos</p>
+        <h3>Itacoatiara</h3>
+      </section>
+
+      <section class="lista-produtos">
+        <!-- PRODUCT 1 -->
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/img/produtos/celular.png" alt="" />
+            <p class="prod-desc">Iphone SE 2019 64GB</p>
+          </div>
+          <div class="card-detalhes">
+            <p class="prod-precAntigo">De R&#36; 2.299,99</p>
+            <h5 class="prod-precoAtual">Por: R&#36; 1.999,99</h5>
+            <p class="prod-parcelamento">
+              Até 10x de R&#36; 199,99 no Cartão de Crédito
+            </p>
+          </div>
+        </div>
+        <!-- PRODUCT 2 -->
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/img/produtos/prod2.jpg" alt="" />
+            <p class="prod-desc">Descricao do produto</p>
+          </div>
+          <div class="card-detalhes">
+            <p class="prod-precAntigo">De R&#36; X.XXX,XX</p>
+            <h5 class="prod-precoAtual">Por: R&#36; XXX,00</h5>
+            <p class="prod-parcelamento">
+              Até 10x de R&#36; XX,XX no Cartão de Crédito
+            </p>
+          </div>
+        </div>
+        <!-- PRODUCT 2 -->
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/img/produtos/prod3.jpg" alt="" />
+            <p class="prod-desc">Descricao do produto</p>
+          </div>
+          <div class="card-detalhes">
+            <p class="prod-precAntigo">De R&#36; X.XXX,XX</p>
+            <h5 class="prod-precoAtual">Por: R&#36; XXX,00</h5>
+            <p class="prod-parcelamento">
+              Até 10x de R&#36; XX,XX no Cartão de Crédito
+            </p>
+          </div>
+        </div>
+        <!-- PRODUCT 2 -->
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/img/produtos/prod4.jpg" alt="" />
+            <p class="prod-desc">Descricao do produto</p>
+          </div>
+          <div class="card-detalhes">
+            <p class="prod-precAntigo">De R&#36; X.XXX,XX</p>
+            <h5 class="prod-precoAtual">Por: R&#36; XXX,00</h5>
+            <p class="prod-parcelamento">
+              Até 10x de R&#36; XX,XX no Cartão de Crédito
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
