--- a/index.html
+++ b/index.html
@@ -6,39 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bemol Digital - Produtos</title>
     <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- <link rel="stylesheet" href="assets/css/style.css" /> -->
+    <link rel="stylesheet" href="assets/css/estilo.css" />
   </head>
   <body>
-    <nav class="navbar-top">
-      <ul>
-        <li>
+    <header class="cabecalho">
+      <div class="container">
+        <div class="header-logo">
           <a href=""
             ><img
               src="assets/img/selo80anos.png"
               alt="Logo Bemol"
               class="nav-logo"
           /></a>
-        </li>
-        <li class="nav-item-direita">
+        </div>
+        <nav class="header-nav">
           <a href="#"
             ><img src="assets/img/user.png" alt="Usuario" class="nav-icons"
           /></a>
-        </li>
-        <li class="nav-item-direita">
           <a href="#"
             ><img
               src="assets/img/carrinho.png"
               alt="Carrinho de compras"
               class="nav-icons"
           /></a>
-        </li>
-        <li class="nav-item-direita">
+
           <a href="#"
             ><input type="text" placeholder="O que você procura?"
           /></a>
-        </li>
-      </ul>
-    </nav>
+        </nav>
+      </div>
+    </header>
     <main>
       <section class="header-catalogo">
         <p>Catalogo de produtos</p>
