--- a/index.html
+++ b/index.html
@@ -4,35 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bemol Digital - Produtos</title>
+    <title>Catalogo de Produtos</title>
     <link rel="stylesheet" href="assets/css/reset.css" />
-    <!-- <link rel="stylesheet" href="assets/css/style.css" /> -->
-    <link rel="stylesheet" href="assets/css/estilo.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <header class="cabecalho">
       <div class="container">
-        <div class="header-logo">
-          <a href=""
-            ><img
-              src="assets/img/selo80anos.png"
-              alt="Logo Bemol"
-              class="nav-logo"
+        <img src="assets/img/selo80anos.png" alt="Selo de 80 anos" />
+        <input type="text" placeholder="O que você está procurando?" />
+        <nav class="navbar">
+          <a href="#" class="nav-item"
+            ><img src="assets/img/carrinho.png" alt=""
           /></a>
-        </div>
-        <nav class="header-nav">
-          <a href="#"
-            ><img src="assets/img/user.png" alt="Usuario" class="nav-icons"
-          /></a>
-          <a href="#"
-            ><img
-              src="assets/img/carrinho.png"
-              alt="Carrinho de compras"
-              class="nav-icons"
-          /></a>
-
-          <a href="#"
-            ><input type="text" placeholder="O que você procura?"
+          <a href="#" class="nav-item"
+            ><img src="assets/img/user.png" alt=""
           /></a>
         </nav>
       </div>
@@ -42,66 +28,26 @@
         <p>Catalogo de produtos</p>
         <h3>Itacoatiara</h3>
       </section>
-
       <section class="lista-produtos">
-        <!-- PRODUCT 1 -->
         <div class="card">
-          <div class="card-header">
-            <img src="assets/img/produtos/celular.png" alt="" />
-            <p class="prod-desc">Iphone SE 2019 64GB</p>
-          </div>
-          <div class="card-detalhes">
-            <p class="prod-precAntigo">De R&#36; 2.299,99</p>
-            <h5 class="prod-precoAtual">Por: R&#36; 1.999,99</h5>
-            <p class="prod-parcelamento">
-              Até 10x de R&#36; 199,99 no Cartão de Crédito
-            </p>
+          <img src="assets/img/produtos/prod2.jpg" alt="" />
+          <p class="descricao">Descricao do produto</p>
+          <div class="card-info">
+            <p class="precoAntigo">R$ XXX,XX</p>
+            <h5 class="precoAtual">R$ XXX,XX</h5>
+            <p class="parcelamento">Até X vezes</p>
           </div>
         </div>
-        <!-- PRODUCT 2 -->
         <div class="card">
-          <div class="card-header">
-            <img src="assets/img/produtos/prod2.jpg" alt="" />
-            <p class="prod-desc">Descricao do produto</p>
-          </div>
-          <div class="card-detalhes">
-            <p class="prod-precAntigo">De R&#36; X.XXX,XX</p>
-            <h5 class="prod-precoAtual">Por: R&#36; XXX,00</h5>
-            <p class="prod-parcelamento">
-              Até 10x de R&#36; XX,XX no Cartão de Crédito
-            </p>
-          </div>
-        </div>
-        <!-- PRODUCT 2 -->
-        <div class="card">
-          <div class="card-header">
-            <img src="assets/img/produtos/prod3.jpg" alt="" />
-            <p class="prod-desc">Descricao do produto</p>
-          </div>
-          <div class="card-detalhes">
-            <p class="prod-precAntigo">De R&#36; X.XXX,XX</p>
-            <h5 class="prod-precoAtual">Por: R&#36; XXX,00</h5>
-            <p class="prod-parcelamento">
-              Até 10x de R&#36; XX,XX no Cartão de Crédito
-            </p>
-          </div>
-        </div>
-        <!-- PRODUCT 2 -->
-        <div class="card">
-          <div class="card-header">
-            <img src="assets/img/produtos/prod4.jpg" alt="" />
-            <p class="prod-desc">Descricao do produto</p>
-          </div>
-          <div class="card-detalhes">
-            <p class="prod-precAntigo">De R&#36; X.XXX,XX</p>
-            <h5 class="prod-precoAtual">Por: R&#36; XXX,00</h5>
-            <p class="prod-parcelamento">
-              Até 10x de R&#36; XX,XX no Cartão de Crédito
-            </p>
+          <img src="assets/img/produtos/prod2.jpg" alt="" />
+          <p class="descricao">Descricao do produto</p>
+          <div class="card-info">
+            <p class="precoAntigo">R$ XXX,XX</p>
+            <h5 class="precoAtual">R$ XXX,XX</h5>
+            <p class="parcelamento">Até X vezes</p>
           </div>
         </div>
       </section>
     </main>
-    <script src="assets/js/script.js"></script>
   </body>
 </html>
