Consumindo API TMDB

--- a/index.html
+++ b/index.html
@@ -38,16 +38,8 @@
             <p class="parcelamento">Até X vezes</p>
           </div>
         </div>
-        <div class="card">
-          <img src="assets/img/produtos/prod2.jpg" alt="" />
-          <p class="descricao">Descricao do produto</p>
-          <div class="card-info">
-            <p class="precoAntigo">R$ XXX,XX</p>
-            <h5 class="precoAtual">R$ XXX,XX</h5>
-            <p class="parcelamento">Até X vezes</p>
-          </div>
-        </div>
       </section>
     </main>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
