--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="cabecalho">
       <div class="container">
-        <img src="assets/img/selo80anos.png" alt="Selo de 80 anos" />
+        <img src="assets/img/bemol-logo.png" alt="Selo de 80 anos" />
         <input type="text" placeholder="O que você está procurando?" />
         <nav class="navbar">
           <a href="#" class="nav-item"
