--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
       </div>
     </header>
     <main>
+      <section class="categorias">
+        <ul>
+          <li><a href="#">Ação</a></li>
+          <li><a href="#">Anime</a></li>
+          <li><a href="#">Drama</a></li>
+          <li><a href="#">Infantil</a></li>
+          <li><a href="#">Romance</a></li>
+          <li><a href="#">Terror</a></li>
+          <li><a href="#">Documentários</a></li>
+          <li><a href="#">Adulto</a></li>
+        </ul>
+      </section>
       <section class="header-catalogo">
         <p>Catálogo de filmes</p>
         <h3>Lançamentos</h3>
