Versão 1.3 - Slider de imagens

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Catalogo de Filmes</title>
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/img-transition.css">
   </head>
   <body>
     <header class="cabecalho">
@@ -36,10 +37,14 @@
           <li><a href="#">Adulto</a></li>
         </ul>
       </section>
-      <section class="header-catalogo">
-        <p>Catálogo de filmes</p>
-        <h3>Lançamentos</h3>
-      </section>
+      <div id="slider">
+        <img src="assets/img/img-transition/368_banner637964403771693588.png" alt="imagem1" />
+        <img src="assets/img/img-transition/454_banner637896056741114255.png" alt="imagem2" />
+        <img src="assets/img/img-transition/477_banner637908265240280322.png" alt="imagem3" />
+        <img src="assets/img/img-transition/490_banner637896160638468822.png" alt="imagem4" />
+        <img src="assets/img/img-transition/59_banner637951243521546901.png" alt="imagem5" />
+        <img src="assets/img/img-transition/618_banner637959173799436153.png" alt="imagem6" />
+      </div>
       <section class="lista-produtos"></section>
     </main>
     <footer>
@@ -57,5 +62,6 @@
       </fieldset>
     </footer>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/img-transition.js"></script>
   </body>
 </html>
